--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "tunnelvision"
-description = "A language for Interactive Fiction!"
+description = "A language for Interactive Fiction"
 authors = [{ name = "Kyle Hess", email = "donotreply@github.com" }]
 version = "0.0.1"
 readme = "README.md"
@@ -12,10 +12,7 @@ urls = { Homepage = "https://github.com/exfret/tunnelgame" }
 keywords = ["IF", "Interactive Fiction"]
 classifiers = ["Topic :: Games/Entertainment :: Role-Playing"]
 requires-python = ">=3.10"
-dependencies = ["build", "black", "pytest", "pyyaml", "rich", "twine", "subprocess", "flask"]
+dependencies = ["build", "pytest", "pyyaml", "rich", "twine", "subprocess", "flask"]
 
 [project.scripts]
 tunnelvision = "tunnelvision:main"
-
-[tool.black]
-line-length = 180
