--- a/stories/tunnel/02-lemeny/intro.yaml
+++ b/stories/tunnel/02-lemeny/intro.yaml
@@ -1,6 +1,6 @@
 ---
 _content:
-  - goto: /orphanage
+  - goto: /tunnel/training
 _include:
   logic: logic.yaml
   orphanage: orphanage.yaml
@@ -13,9 +13,14 @@ _vars:
   # Logic vars
   # Progress vars
   - tunnel_pass: training
+  # Inventory vars
+  - coin: 0
+    _locale: Coin
+  - rosalia: 0
+    _locale: Rosalia
   # Misc. vars
   - is_expedition_day: True # It's initially an expedition day when the story starts
-  - on_training_expedition: False
+  - on_training_expedition: True # Start off in the middle of the expedition to the Tunnel
   - time_next_training: 0
 _header:
   - pass:
